fix: tabbar is covered by browser

--- a/app/src/pages/app.module.scss
+++ b/app/src/pages/app.module.scss
@@ -6,6 +6,9 @@
   overflow-y: hidden;
 
   .header {
+    position: sticky;
+    top: 0;
+    width: 100%;
     background-color: #a03cf7;
     height: 4rem;
     display: flex;
@@ -26,7 +29,7 @@
   }
 
   .footer {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width: 100%;
     background-color: white;
